--- a/package.json
+++ b/package.json
@@ -4,26 +4,29 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --config webpack.config.js --mode development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.41.1",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "babel-loader": "^8.0.6"
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "babel-loader": "^8.2.3",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/escoladejavascript.com/webpack-start.git"
+    "url": "git+https://github.com/LeoCastr0/web-pack-sample.git"
   },
   "bugs": {
-    "url": "https://gitlab.com/escoladejavascript.com/webpack-start/issues"
+    "url": "https://github.com/LeoCastr0/web-pack-sample/issues"
   },
-  "homepage": "https://gitlab.com/escoladejavascript.com/webpack-start#readme",
-  "description": ""
+  "homepage": "https://github.com/LeoCastr0/web-pack-sample#readme",
+  "description": "",
+  "dependencies": {
+    "path": "^0.12.7"
+  }
 }
